--- a/clients/users-ui/package.json
+++ b/clients/users-ui/package.json
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.6",
     "@hookform/resolvers": "^3.3.4",
     "@nextui-org/react": "^2.2.10",
     "framer-motion": "^11.0.8",
+    "graphql": "^16.8.1",
+    "js-cookie": "^3.0.5",
     "next": "14.1.3",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
