--- a/clients/users-ui/package.json
+++ b/clients/users-ui/package.json
@@ -12,11 +12,15 @@
     "@apollo/client": "^3.9.6",
     "@hookform/resolvers": "^3.3.4",
     "@nextui-org/react": "^2.2.10",
+    "@prisma/client": "^5.11.0",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^11.0.8",
     "graphql": "^16.8.1",
     "js-cookie": "^3.0.5",
     "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
+    "prisma": "^5.11.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
@@ -25,6 +29,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
